Сделан динамический вывод продуктов, начал делать универсальную модалку

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -210,6 +210,7 @@ ul,li{
   // Colors
   --main-bg-color: #E5E5E5;
   --yellow-100: #F7D22D;
+  --yellow-40: linear-gradient(0deg, rgba(247, 210, 45, 0.4), rgba(247, 210, 45, 0.4)), rgba(33, 49, 52, 0.2);
   --black: #000000;
   --gray-90: #797979;
   --gray-100: #686466;
