--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -232,6 +232,12 @@ ul,li{
     margin: 0 auto;
 }
 
+.container-sm{
+  max-width: 816px;
+  padding: 0px 10px;
+  margin: 0 auto;
+}
+
 input{
   border: 1.5px solid #E2E2E9;
   border-radius: 8px;
