--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -9,3 +9,9 @@
     display: flex;
     align-items: center;
 }
+
+@media(max-width: 690px){
+    .navigationLink{
+        font-size: 14px;
+    }
+}
