Оптимизировал компоненты с иконками, заменив svg на Fort-Awesome

--- a/src/components/CartItem/cartItem.module.scss
+++ b/src/components/CartItem/cartItem.module.scss
@@ -54,4 +54,10 @@
     .cartProductMiniature{
         margin-bottom: 20px;
     }
+
+    .productMainInfo{
+        & div {
+            margin-left: 0;
+        }
+    }
 }
