--- a/src/components/CartItemActions/cartItemActions.module.scss
+++ b/src/components/CartItemActions/cartItemActions.module.scss
@@ -1,6 +1,8 @@
 .numberActions{
     display: flex;
     align-items: center;
+    min-width: 110px;
+    justify-content: center;
 }
 
 .numberActionsItem{
@@ -27,10 +29,6 @@
 .cartItemActions{
     display: flex;
     align-items: center;
-}
-
-.removeCartItem{
-    margin-left: 35px;
 }
 
 @media(max-width: 690px){
