--- a/src/components/OrderActions/orderActions.module.scss
+++ b/src/components/OrderActions/orderActions.module.scss
@@ -1,4 +1,4 @@
-.cartActionsItem{
+.orderActionsItem{
     display: flex;
     align-items: center;
     font-size: 15px;
@@ -9,9 +9,13 @@
         color: var(--gray-100);
         margin-left: 15px;
     }
+
+    .orderActionsItemIcon{
+        color: var(--gray-100);
+    }
 }
 
-.cartActionsItemOrder {
+.orderActionsItemOrder {
     width: 225px;
     height: 55px;
     background: var(--yellow-100);
@@ -25,6 +29,10 @@
         color: #231F20;
         margin-right: 15px;
     }
+
+    .orderActionsItemIcon{
+        color: #231F20;
+    }
 }
 
 .cartActions{
@@ -32,4 +40,31 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 40px;
+}
+
+
+@media(max-width: 500px){
+    .orderActionsItemOrder{
+        width: 150px;
+        height: 40px;
+
+        span {
+            font-size: 12px;
+            margin-right: 5px;
+        }
+    }
+
+    .orderActionsItem{
+        display: flex;
+        align-items: center;
+        font-size: 15px;
+        line-height: 28px;
+    
+        span {
+            font-family: var(--bold);
+            color: var(--gray-100);
+            font-size: 12px;
+            margin-left: 5px;
+        }
+    }
 }
