--- a/src/components/CartItem/cartItem.module.scss
+++ b/src/components/CartItem/cartItem.module.scss
@@ -1,12 +1,22 @@
 .cartItem{
     display: flex;
-    align-items: center;
     justify-content: space-between;
     padding: 30px 0px;
     border-top: 2px solid rgba(0, 0, 0, 0.06);
+    position: relative;
 
     &:last-child{
         border-bottom: 2px solid rgba(0, 0, 0, 0.06);
+    }
+}
+
+.actionStatusMessage{
+    position: absolute;
+    top: 0;
+    right: 0;
+    
+    div{
+        font-size: 16px;
     }
 }
 
