--- a/src/components/CartItemActions/cartItemActions.module.scss
+++ b/src/components/CartItemActions/cartItemActions.module.scss
@@ -5,6 +5,19 @@
     justify-content: center;
 }
 
+.cartItemActionsWrapper{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.loadingMessage{
+    font-family: var(--medium);
+    line-height: 25px;
+    margin-top: 5px;
+    color: var(--pink);
+}
+
 .numberActionsItem{
     padding: 7px 15px;
     font-size: 10px;
@@ -28,7 +41,6 @@
 
 .cartItemActions{
     display: flex;
-    align-items: center;
 }
 
 @media(max-width: 690px){
