--- a/src/components/CartItem/cartItem.module.scss
+++ b/src/components/CartItem/cartItem.module.scss
@@ -1,6 +1,7 @@
 .cartItem{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 30px 0px;
     border-top: 2px solid rgba(0, 0, 0, 0.06);
     position: relative;
