--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -29,3 +29,9 @@
     justify-content: space-between;
     margin-bottom: 40px;
 }
+
+@media (max-width: 500px){
+    .modalHeader{
+        font-size: 24px;
+    }
+}
