--- a/src/components/SectionTitle/sectionTitle.module.scss
+++ b/src/components/SectionTitle/sectionTitle.module.scss
@@ -4,3 +4,9 @@
     line-height: 39px;
     color: var(--yellow-100);
 }
+
+@media (max-width: 700px){
+    .title{
+        font-size: 25px;
+    }
+}
