--- a/styles/forms.module.scss
+++ b/styles/forms.module.scss
@@ -1,8 +1,32 @@
+.formInput{
+    width: 255px;
+    height: 48px;
+}
+
+.authForm{
+    max-width: 405px;
+}
+
 .adressForm{
     max-width: 430px;
 }
 
-.adressFormItem{
+.switchFormType{
+    margin-top: 10px;
+    color: var(--pink);
+    font-family: var(--medium);
+    font-size: 12px;
+}
+
+.formInputErrorMessage{
+    margin-top: 10px;
+    color: var(--pink);
+    font-family: var(--medium);
+    font-size: 12px;
+}
+
+.formItem{
+    
     & div{
         display: flex;
         align-items: center;
@@ -13,18 +37,6 @@
     &:not(:first-child){
         margin-top: 15px;
     }
-}
-
-.adressFormInputErrorMessage{
-    margin-top: 10px;
-    color: var(--pink);
-    font-family: var(--medium);
-    font-size: 12px;
-}
-
-.authFormInput{
-    width: 255px;
-    height: 48px;
 }
 
 .sendFormButton{
@@ -40,18 +52,5 @@
 
     &:hover{
         color: #FFFFFF;
-    }
-}
-
-@media (max-width: 500px){
-    .adressFormItem{
-        & div{
-            flex-direction: column;
-            align-items: start;
-        }
-    
-        &:not(:first-child){
-            margin-top: 15px;
-        }
     }
 }
