Сделан функционал создания заказа

--- a/src/components/OrderActions/orderActions.module.scss
+++ b/src/components/OrderActions/orderActions.module.scss
@@ -23,6 +23,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 8px;
+    cursor: pointer;
 
     span {
         font-family: var(--extra-bold);
