--- a/styles/order.module.scss
+++ b/styles/order.module.scss
@@ -10,4 +10,19 @@
 
 .orderActions{
     margin-top: 143px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.createOrderButton{
+    width: 225px;
+    height: 55px;
+    background: var(--yellow-100);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    cursor: pointer;
+    font-family: var(--bold);
 }
