--- a/src/components/OrderInfoItem/orderInfoItem.module.scss
+++ b/src/components/OrderInfoItem/orderInfoItem.module.scss
@@ -16,14 +16,20 @@
     }
 }
 
+@media(max-width: 970px){
+    .orderInfoItem{
+        flex-direction: column;
+        align-items: start;
+    }
+}
+
 .orderInfoItemValue{
     font-family: var(--bold);
     font-size: 17px;
     line-height: 28px;
     color: #231F20;
     opacity: 0.82;
-    max-width: 540px;
-    width: 100%;
+    width: 540px;
     border: 1.5px solid #E2E2E9;
     border-radius: 7px;
     padding: 10px 20px;
@@ -35,4 +41,16 @@
 
 .orderInfoItemEditButton{
     color: var(--yellow-100);
+}
+
+@media(max-width: 1110px){
+    .orderInfoItemValue{
+        width: 400px;
+    }
+}
+
+@media(max-width: 420px){
+    .orderInfoItemValue{
+        width: 340px;
+    }
 }
