--- a/src/components/CartLink/cartLink.module.scss
+++ b/src/components/CartLink/cartLink.module.scss
@@ -35,10 +35,11 @@
     justify-content: space-around;
 }
 
-@media(max-width: 690px){
+@media(max-width: 600px){
     .cartLink{
         font-size: 14px;
         width: 130px;
         height: 38px;
+        margin-left: 15px;
     }
 }
